Update resume.tex for 4/25/2024

--- a/Writing Samples /Resume Source/resume.tex
+++ b/Writing Samples /Resume Source/resume.tex
@@ -22,13 +22,10 @@
     32 Rutland  APT 3R, Boston MA 02118 \\ \vspace{1pt}
     \small \href{tel:+xxxxxxxxxxxx}{ \raisebox{-0.1\height}\faPhone\ \underline{+202-534-9460} ~} \href{mailto:yourname@gmail.com}{\raisebox{-0.2\height}\faEnvelope\   \underline{jglagoyda@gmail.com}} ~ \\ 
     \href{linkedin.com/in/jasper-gould-lagoyda-93a255131}{\raisebox{-0.2\height}\faLinkedinSquare\ \underline{linkedin.com/in/jasper-gould-lagoyda-93a255131}}  ~
-    \href{https://github.com/Jglagoyda}{\raisebox{-0.2\height}\faGithub\ \underline{https://github.com/Jglagoyda}} ~
+   % \href{https://github.com/Jglagoyda}{\raisebox{-0.2\height}\faGithub\ \underline{https://github.com/Jglagoyda}} ~
     \vspace{-8pt}
 \end{center}
 %-----------
-\section{OBJECTIVE}
-Detail-oriented Mathematics student skilled in programming languages (Python, Java, C++, Matlab) and analytical problem-solving seeks a Data Analyst position to apply technical expertise in numerical analysis, probability, and generative models for innovative data-driven solutions.
-%-----------EDUCATION----------- 
 \section{EDUCATION}
 \resumeSubHeadingListStart
     \resumeSubheading
@@ -49,16 +46,14 @@ Detail-oriented Mathematics student skilled in programming languages (Python, Ja
                 \item Matlab Programing 
                 \item Python 
                 \item Multi-variable Calculus
-                %\item Calculus 1-3 
                 \item Linear Algebra 
                 \item Differential Equations
                 \item Chemistry 1 and 2 with Lab 
                 \item College Physics Mechanics with Lab 
                 \item Numerical Analysis
-                \item Mathematical Computing 
                 \item Probability  
                 \item Generative Models 
-            %    \item Working knowledge of Linux/Command-line Unix
+                \item Working knowledge of Linux/Command-line Unix
                % \item Meeting Note Taking 
             \end{itemize}
         \end{multicols}
@@ -68,14 +63,22 @@ Detail-oriented Mathematics student skilled in programming languages (Python, Ja
 \section{EXPERIENCE}
  \resumeSubHeadingListStart
     \resumeSubheading
+      {Columbus Cleaners}{Jun 2022 -- August 2022} 
+      {\underline{Store Clark}}{Boston, MA}
+      \resumeItemListStart
+        \resumeItem{\normalsize{ Provided customer service, addressing inquiries and ensuring high satisfaction levels. }}
+        \resumeItem{\normalsize{Managed cash transactions accurately.}}
+        \resumeItem{\normalsize{Organized and processed incoming orders efficiently, adhering to quality standards and timelines.}}
+      \resumeItemListEnd  
+  \resumeSubHeadingListEnd
+ \resumeSubHeadingListStart
+    \resumeSubheading
       {Bunker Hill Community College}{September 2020 -- May 2021} 
       {\underline{Executive Secretary for the Student Government Association}} {Boston, MA}%{Boston MA} 
       \resumeItemListStart
         \resumeItem{\normalsize{Recorded minutes of SGA meetings.}}
         \resumeItem{\normalsize{Acted as parliamentarian for SGA meetings.}}
-        \resumeItem{\normalsize{Distributed minutes and agendas for SGA meeting through email}}
         \resumeItem{\normalsize{Managed SGA online accounts and documents.}}
-        \resumeItem{\normalsize{Participated on the governance committees of the college.}}
         \resumeItem{\normalsize{Along with other members of the SGA help amend the SGA constitution. }}
         \resumeItem{\normalsize{Analyzed problems in the community and used creative thinking to solve the problems.}}
       \resumeItemListEnd  
@@ -89,20 +92,10 @@ Detail-oriented Mathematics student skilled in programming languages (Python, Ja
         \resumeItem{\normalsize{Assisted staff with accounting in managing and organizing receipts.}}
         \resumeItem{\normalsize{Attended and took notes on public policies panels on autonomous vehicles. }}
          \resumeItem{\normalsize{Aided in managing twitter accounts.}}
-  
       \resumeItemListEnd  
   \resumeSubHeadingListEnd
 \vspace{-12pt}
 %-----------PROGRAMMING SKILLS-----------
-\section{TECHNICAL SKILLS}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{\normalsize{Programming Languages:}}{ \normalsize{Python, Java, C++, Matlab, Latex}} \\
-     \textbf{\normalsize{Meeting Skills:}}{ \normalsize{Preparing agendas, recording and keeping meeting minutes, sending meeting minutes to participants  } \\
-    }}}
- \end{itemize}
- \vspace{-15pt}
-
 
 %-----------INVOLVEMENT---------------
 
@@ -121,6 +114,14 @@ Detail-oriented Mathematics student skilled in programming languages (Python, Ja
             \resumeItem{\normalsize{Organize a trip to Pax Unplugged in Philadelphia.}}
             \resumeItem{\normalsize{Work with officers to plan and execute the trip.}}
             \resumeItem{\normalsize{Worked with ESO Travel Team to provide payment for accommodations for trip  }}
+            \resumeItemListEnd
+    \resumeSubHeadingListEnd
+    \resumeSubHeadingListStart
+    \resumeSubheading{NOLS Waddington Range Expectation}{Jun 2023 - Jul 2023}{\underline{Expectation Member}}{Mount Vernon, WA}
+           \resumeItemListStart
+            \resumeItem{\normalsize{Climbed Mountains, Geysers, and navigated woods and forest.}}
+            \resumeItem{\normalsize{Worked with Expectation members and Leaders to achieve objectives.  }}
+            \resumeItem{\normalsize{Cook food and helped make camp every night. }}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
  \vspace{-11pt}
