--- a/Writing Samples /Resume Source/resume.tex
+++ b/Writing Samples /Resume Source/resume.tex
@@ -74,12 +74,12 @@
  \resumeSubHeadingListStart
     \resumeSubheading
       {Bunker Hill Community College}{September 2020 -- May 2021} 
-      {\underline{Executive Secretary for the Student Government Association}} {Boston, MA}%{Boston MA} 
+      {\underline{Executive Secretary for the Student Government Association (SGA)}} {Boston, MA}%{Boston MA} 
       \resumeItemListStart
         \resumeItem{\normalsize{Recorded minutes of SGA meetings.}}
         \resumeItem{\normalsize{Acted as parliamentarian for SGA meetings.}}
         \resumeItem{\normalsize{Managed SGA online accounts and documents.}}
-        \resumeItem{\normalsize{Along with other members of the SGA help amend the SGA constitution. }}
+        \resumeItem{\normalsize{Along with other members of the SGA, helped amend the SGA constitution. }}
         \resumeItem{\normalsize{Analyzed problems in the community and used creative thinking to solve the problems.}}
       \resumeItemListEnd  
   \resumeSubHeadingListEnd
@@ -88,10 +88,10 @@
       {Access Partnership}{Jun 2017 -- Jul 2017} 
       {\underline{Summer Intern}}{Washington, DC}
       \resumeItemListStart
-        \resumeItem{\normalsize{Assisted staff with regarding research of the Chilean government telecom regulator }}
+        \resumeItem{\normalsize{Assisted staff with  research on the Chilean government telecom regulator }}
         \resumeItem{\normalsize{Assisted staff with accounting in managing and organizing receipts.}}
-        \resumeItem{\normalsize{Attended and took notes on public policies panels on autonomous vehicles. }}
-         \resumeItem{\normalsize{Aided in managing twitter accounts.}}
+        \resumeItem{\normalsize{Attended on a public policy panel on autonomous vehicles and took notes. }}
+         \resumeItem{\normalsize{Aided in managing Twitter accounts.}}
       \resumeItemListEnd  
   \resumeSubHeadingListEnd
 \vspace{-12pt}
@@ -101,27 +101,27 @@
 
 \section{EXTRACURRICULAR}
  \resumeSubHeadingListStart
-    \resumeSubheading{University of Massachusetts Amherst Chapter of SIAM}{ September 2023 - May 2024}{\underline{President and Founder}}{Amherst, MA}
+    \resumeSubheading{University of Massachusetts Amherst Chapter of SIAM}{ September 2023 - May 2024}{\underline{Founder and President}}{Amherst, MA}
            \resumeItemListStart
-            \resumeItem{\normalsize{Provided visionary leadership and strategic planning for the Chapter.  }}
-            \resumeItem{\normalsize{Recruited and leaded team of Six people.}}
-            \resumeItem{\normalsize{Delegated tasks and responsibility to team members. }}
+            \resumeItem{\normalsize{Founded and initiated Chapter.}}
+            \resumeItem{\normalsize{ Achieved Chapter recognition from the Society for Industrial and Applied Mathematics, SIAM.}}
+            \resumeItem{\normalsize{Recruited and led a team of Six people.}}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
     \resumeSubHeadingListStart
     \resumeSubheading{University of Massachusetts Amherst Board Game Club}{ September 2023 - May 2024}{\underline{Events Coordinator}}{Amherst, MA}
            \resumeItemListStart
-            \resumeItem{\normalsize{Organize a trip to Pax Unplugged in Philadelphia.}}
-            \resumeItem{\normalsize{Work with officers to plan and execute the trip.}}
-            \resumeItem{\normalsize{Worked with ESO Travel Team to provide payment for accommodations for trip  }}
+            \resumeItem{\normalsize{Organized a trip to Pax Unplugged in Philadelphia.}}
+            \resumeItem{\normalsize{Worked with officers to plan and execute the trip.}}
+            \resumeItem{\normalsize{Worked with University Student finance Team to provide payment for accommodations for trip  }}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
     \resumeSubHeadingListStart
-    \resumeSubheading{NOLS Waddington Range Expectation}{Jun 2023 - Jul 2023}{\underline{Expectation Member}}{Mount Vernon, WA}
+    \resumeSubheading{NOLS Waddington Range Expedition}{Jun 2023 - Jul 2023}{\underline{Expectation Member}}{Mount Vernon, WA}
            \resumeItemListStart
             \resumeItem{\normalsize{Climbed Mountains, Geysers, and navigated woods and forest.}}
-            \resumeItem{\normalsize{Worked with Expectation members and Leaders to achieve objectives.  }}
-            \resumeItem{\normalsize{Cook food and helped make camp every night. }}
+            \resumeItem{\normalsize{Worked with expedition members and Leaders to achieve objectives.  }}
+            \resumeItem{\normalsize{Cooked food and helped make camp every night. }}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
  \vspace{-11pt}
